
    o The Hubs have been updated to use BiocFileCache as a backend utility for
    managing and downloading resources. This allows for file specific caching
    mechanism. This change is a significant user change as it changed the
    default directories for the Hubs (AnnotationHub/ExperimentHub) as well as
    the base directory no longer being hidden.

NEW FEATURES

    o (2.15.2) Add function to list currently available DispatchClass

USER-VISIBLE MODIFICATIONS

    o (2.15.3)  Bioconductor will no longer accept random, Individual resources
    without an accompanied package.
    o (2.15.4)  We also encourage the use of AnnotationHub rather than very
    large annotation packages. We added sections for users wishing to convert
    existing packages to use AnnotationHub as well.
    o (2.15.7) There were substantial updates to Rsamtools. Rsamtools no longer
    supports razip files. These files have been removed from the hub and
    vignette updated to use the twobit and gff files

BUG FIXES
    o (2.15.5) Fixed bug. If resources are removed from the hub, this should
    only be reflected in the devel branch but still be available in release
    branch. The filter for exposed resources was refined to respect
    datadateremoved


CHANGES IN VERSION 2.12.0
-------------------------

MODIFICATIONS

    o Updated code from BiocInstaller to BiocManager

CHANGES IN VERSION 2.12.0
-------------------------

BUG FIXES

    o Prompt for permission when downloading many (more than
    AnnotationHubOption("MAX_DOWNLOADS")) resources.

MODIFICATIONS

    o Moved readMetadataFromCsv back to AnnotationHubData.

    o Use AnnotationHubData::makeAnnotationHubMetadata to validate metadata.csv

CHANGES IN VERSION 2.10.0
------------------------

NEW FEATURES

    o AnnotationHub will now work offline utilizing argument 'localHub'; will
    also use this option automatically if no internet connection is detected.

    o Added new GDSResource class
