@@ -11,6 +11,8 @@ SIGNIFICANT USER-VISIBLE CHANGES
 
 NEW FEATURES
 
+    o (2.15.9) Add helper function to get additional information on
+    resources. getInfoOnIds
     o (2.15.2) Add function to list currently available DispatchClass
 
 USER-VISIBLE MODIFICATIONS
